# frappe_whatsapp_chatbot

./: MANIFEST.in  pyproject.toml  requirements.txt
docs/: README.md
docs/configuration/: keywords.md  settings.md
docs/reference/: doctypes.md
frappe_whatsapp_chatbot/: hooks.py
frappe_whatsapp_chatbot/chatbot/: ai_responder.py  flow_engine.py  processor.py
frappe_whatsapp_chatbot/frappe_whatsapp_chatbot/doctype/whatsapp_ai_context/: test_whatsapp_ai_context.py  whatsapp_ai_context.js  whatsapp_ai_context.json
frappe_whatsapp_chatbot/frappe_whatsapp_chatbot/doctype/whatsapp_business_hours/: __init__.py  whatsapp_business_hours.json  whatsapp_business_hours.py
frappe_whatsapp_chatbot/frappe_whatsapp_chatbot/doctype/whatsapp_chatbot/: test_whatsapp_chatbot.py  whatsapp_chatbot.js  whatsapp_chatbot.json  whatsapp_chatbot.py
frappe_whatsapp_chatbot/frappe_whatsapp_chatbot/doctype/whatsapp_chatbot_session/: test_whatsapp_chatbot_session.py  whatsapp_chatbot_session.js  whatsapp_chatbot_session.json
frappe_whatsapp_chatbot/frappe_whatsapp_chatbot/doctype/whatsapp_keyword_reply/: whatsapp_keyword_reply.json
