[project]
name = "frappe_whatsapp_chatbot"
authors = [
    { name = "Shridhar Patil", email = "shrip.dev@gmail.com"}
]
description = "WhatsApp Chatbot for Frappe with keyword replies, conversation flows, and optional AI"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "google-generativeai>=0.5.0"
]

[project.optional-dependencies]
ai = [
    "openai>=1.0.0",
    "anthropic>=0.18.0"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0"
frappe_whatsapp = ">=0.0.1"
